empty database message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="goto_result">Show results!</string>
     <string name="new_quiz">New quiz!</string>
     <string name="score_text">%s / %s correct</string>
+    <string name="no_items">Database is empty! Add some persons</string>
 </resources>
